# BrainConsciousnessSimulator

./: CMakeLists.txt  README.md  architecture.json
src/: BrainSimulator.h  ConsciousnessMetrics.h  NeuralNetwork.h  StimulationModel.h  config.cpp  main.cpp
